fix overlap

--- a/montrek/baseclasses/static/base.css
+++ b/montrek/baseclasses/static/base.css
@@ -124,3 +124,9 @@ input[readonly] {
     color: #333;
     cursor: not-allowed;
 }
+
+
+#signup-form-container {
+    padding: 30px;
+}
+
